fix some status 201 for 200
