# swagger.json
@@ -32,7 +32,7 @@
           }
         ],
         "responses": {
-          "201": {
+          "200": {
             "description": "successful operation",
             "schema": {
               "$ref": "#/definitions/ApiResponseUser"
@@ -78,7 +78,7 @@
           }
         ],
         "responses": {
-          "201": {
+          "200": {
             "description": "successful operation",
             "schema": {
               "$ref": "#/definitions/ApiResponseUser"
@@ -113,7 +113,7 @@
           }
         ],
         "responses": {
-          "201": {
+          "200": {
             "description": "successful operation",
             "headers": {
               "x-access-token": {
@@ -195,7 +195,7 @@
         }
         ],
         "responses": {
-          "201": {
+          "200": {
             "description": "successful operation",
             "schema": {
               "$ref": "#/definitions/ApiResponseContact"
